WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283157
[WebGPU] nesting texture_external inside the AB causes alignment inconsistencies
https://bugs.webkit.org/show_bug.cgi?id=283157
Summary
[WebGPU] nesting texture_external inside the AB causes alignment inconsistencies
Mike Wyrzykowski
Reported
2024-11-14 21:46:10 PST
[WebGPU] nesting texture_external inside the AB causes alignment inconsistencies
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-11-14 21:46:32 PST
rdar://139735261
Mike Wyrzykowski
Comment 2
2024-11-14 21:58:14 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36681
EWS
Comment 3
2024-11-15 13:31:22 PST
Committed
286653@main
(ddaea4e37882): <
https://commits.webkit.org/286653@main
> Reviewed commits have been landed. Closing PR #36681 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug