[WebGPU] nesting texture_external inside the AB causes alignment inconsistencies https://bugs.webkit.org/show_bug.cgi?id=283157 rdar://139735261

Reviewed by Tadeu Zagallo.

The shader struct and pipeline AB continued to be misaligned even
after 286594@main, so simply place the members in-line as that
is guaranteed to match the MTLArgumentEncoder result.

* LayoutTests/fast/webgpu/nocrash/fuzz-283157-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-283157.html: Added.
Add regression test.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::emitNecessaryHelpers):
Revert 286594@main and insert members inline.

Canonical link: https://commits.webkit.org/286653@main